# heimdali-data

./: 0.11_0.22_0.33_f_o1.h5  0.11_0.22_0.33_f_o2.h5  0.11_0.22_0.33_f_o4.h5  CMakeLists.txt  README.md  WriteHDF5Image.cxx  WriteHDF5Imtest.cxx  WriteHDF5ImtestByPlane.cxx  WriteHDF5ZeroToOne.cxx  boolean_and_f1.h5  boolean_and_f1.inr  boolean_another_f1.h5  boolean_another_f1.inr  boolean_f1.h5  boolean_f1.inr  boolean_or_f1.h5  boolean_or_f1.inr  boolean_xor.h5  boolean_xor_f1.inr  cim_fixed_point.h5  cossin_z5_y5_x5_c2_f2.h5  cossin_z5_y5_x5_c2_f2.inr  cossin_z5_y5_x5_c2_r4.h5  cossin_z5_y5_x5_c2_r4.inr  cossin_z5_y5_x5_c2_r4_mb_0_5_f1.h5  cossin_z5_y5_x5_c2_r4_mb_0_5_f1.inr  cossin_z5_y5_x5_c2_r4_mh_0_5_f1.h5  cossin_z5_y5_x5_c2_r4_mh_0_5_f1.inr  cossin_z5_y5_x5_c2_r4_sba_0_5.h5  cossin_z5_y5_x5_c2_r4_sba_0_5.inr  cossin_z5_y5_x5_c2_r4_sha_0_5.h5  cossin_z5_y5_x5_c2_r4_sha_0_5.inr  cossin_z5_y5_x5_c2_r4_vb_0_5.h5  cossin_z5_y5_x5_c2_r4_vb_0_5.inr  cossin_z5_y5_x5_c2_r4_vh_0_5.h5  cossin_z5_y5_x5_c2_r4_vh_0_5.inr  imtest_iz0_z5_y4_x3_c2.h5  imtest_iz1_z5_y4_x3_c2.h5  imtest_iz2_z5_y4_x3_c2.h5  imtest_iz3_z5_y4_x3_c2.h5  (+100 more)
